--- a/JavaScript/functions/index.html
+++ b/JavaScript/functions/index.html
@@ -16,9 +16,9 @@
             // let random_name = "";
 
             //Hier kun je coderen
-            console.log("\n")
+
             //Opdracht 1: Print Hello World in console
-            console.log(print_hello_world());
+            console.log(`\n${print_hello_world()}`);
             
             //Opdracht 2: Text input param
             print_out(text_param_assignment(input_text));
@@ -126,10 +126,7 @@
 
             switch (name_id) {
                 case 1:
-                    _name = "John";
-                    break;
-                case 2:
-                    _name = "Olly";
+                    _name = "John";print_hello_world
                     break;
                 case 3:
                     _name = "Mo";
