Loops & Iterators Scopes | JS - Update

--- a/JavaScript/scopes/index.html
+++ b/JavaScript/scopes/index.html
@@ -67,13 +67,23 @@
         // let​​ carName​;​function​​ printCar​() {​carBrand​ = ​"Volvo"​;       }​console​.​log​(​carBrand​);
 
         // Opdracht 3
-        // function​​ printCar​() {​carBrand ​= ​"Volvo"​;       }​ printCar​();​console​.​log​(​carBrand​);
+        let carName;
+        function printCar() {
+            carBrand = "Volvo";
+        }
+        printCar();
+        console.log(carBrand);
 
         // Opdracht 4
-        // function​​ printCar​() {​carBrand​ = ​"Volvo"​;​return​​function​(​type​) {​console​.​log​(​carBrand​ + ​" "​ + ​type​);}}​const​​car​ = ​printCar​();​car​(​"v40"​);
-
-
-
+        
+        function printCar() {
+            carBrand = "Volvo";
+            return function (type) {
+                console.log(carBrand + " " + type);
+            }
+        }
+        const car = printCar();
+        car("v40");
     </script>
 </body>
 
