Loops&Iterations (fibonacci) | JS - Update

--- a/JavaScript/functions/report_card.html
+++ b/JavaScript/functions/report_card.html
@@ -252,9 +252,9 @@
 
     <script>
         (function(){
-            const tbody
+            // const tbody = document.
 
-            formatCheck(document);
+            // formatCheck(document);
         })();
         /**
          * VARS
