RPS & Objects | JS - Update

--- a/JavaScript/objects/index.html
+++ b/JavaScript/objects/index.html
@@ -115,11 +115,11 @@
          * */
 
         console.log(`\nOpdracht 5\n-------------`);
-        // const Person = {
-        //         name: "Tino",
-        //         age: 4
-        //     }
-        // console.log(person);
+        const Person = {
+                name: "Tino",
+                age: 4
+            }
+        console.log(person);
         console.log(`Voordeel: zelf structuur aanbrengen, makkelijker te manipuleren\nNadelen: Onoverzichtelijker, onveiliger (geen constructor die sanitation uitvoert), niet foutgevoelig, niet uniform`);
 
         /**
@@ -131,13 +131,13 @@
          * Zet opdracht 4 om in classes i.p.v object constructors.
          * */
 
-        // class Person{
-        //     constructor(name, age){
-        //         this.name = name;
-        //         this.age = age;
-        //     }
+        class Person{
+            constructor(name, age){
+                this.name = name;
+                this.age = age;
+            }
 
-        // }
+        }
     </script>
 </body>
 
