--- a/JavaScript/objects/try.html
+++ b/JavaScript/objects/try.html
@@ -12,6 +12,7 @@
             this.telnr = telnr;
             this.contact_person = contact_person;
         }
+
         const Club = function (name, type_sport, members_amount, contact_info_adr, telnr, contact) {
             this.name = name;
             this.type_sport = type_sport;
@@ -22,10 +23,10 @@
         const club = new Club("Test", "Sport", 23, "wrt", "342345", "Debbie");
         console.log(club);
 
-        const club2 = new Club;
-        club2.name = "Ford";
-        club2.type_sport = "Surfing";
-        club2.contact_info.address = ""
+        // const club2 = new Club;
+        // club2.name = "Ford";
+        // club2.type_sport = "Surfing";
+        // club2.contact_info.address = ""
 
     </script>
 </body>
