--- a/JavaScript/eindopdracht/index.html
+++ b/JavaScript/eindopdracht/index.html
@@ -93,7 +93,7 @@
             /* height: fit-conte; */
             /* width: inherit; */
             /* align-content: space-between; */
-            flex-wrap:;
+            /* flex-wrap:; */
             /* justify-content: space-between; */
 
         }
