--- a/JavaScript/eindopdracht/index.html
+++ b/JavaScript/eindopdracht/index.html
@@ -5,128 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | Eindopdracht | JS - Week 8</title>
-
-    <style>
-        @font-face {
-            font-family: 'Calculator Font';
-            src: url('./assets/calc_font.ttf'); /* IE9 Compat Modes */
-            src: url('./assets/calc_font.ttf') format('truetype'), /* Super Modern Browsers */
-                url('./assets/calc_font.ttf') format('truetype'), /* Pretty Modern Browsers */
-                url('./assets/calc_font.ttf')  format('truetype'), /* Safari, Android, iOS */
-            }
-
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        button {
-            border-radius: 50%;
-            height: 20px;
-            width: 20px;
-            padding: 30px;
-            font-size: 15px;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            outline: none;
-            border: none;
-            /* flex-grow: 1; */
-            
-        }
-        button:active{
-            background-color: #ffffff;
-        }
-
-        /* Utilities */        
-
-        #zero {
-            flex-grow: 0;
-        }
-
-        .border {
-            border: 2px solid purple;
-        }
-
-        .flex {
-            display: flex;
-        }
-
-        .aic {
-            align-items: center;
-        }
-
-        .flex_jcc {
-            justify-content: center;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-
-        #display {
-            font-family: 'Calculator Font';
-            height: 110px;
-            font-size: xx-large;
-            background-color: rgb(44, 43, 43);
-            color: white;
-            justify-content: flex-end;
-            padding-right: 15px;
-            border-top-left-radius: 25px;
-            border-top-right-radius: 25px;
-            border: 1px solid black;
-            overflow: hidden;
-        }
-
-        .container{
-            width: 350px;
-        }
-        .buttonsContainer {
-            padding: 30px;
-            background-color: rgb(0, 0, 0);
-            /* height: fit-conte; */
-            /* width: inherit; */
-            /* align-content: space-between; */
-            /* flex-wrap:; */
-            /* justify-content: space-between; */
-
-        }
-
-        .numbersContainer {
-            flex-wrap: wrap;
-            justify-content: space-between;
-            height: 300px;
-            width: inherit;
-        }
-
-        .opContainer {
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: inherit;
-        }
-
-        .genericButtons {
-            height: fit-content;
-            justify-content: space-between;
-        }
-
-        .operators {
-            background-color: orange;
-            color: white;
-            flex-direction: column;
-            font-size: 14px;
-        }
-
-        .numbers {
-            background-color: rgb(90, 88, 88);
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -134,14 +13,14 @@
     <main class="flex flex_jcc aic">
         <div class="container">
             <div id="display" class="flex aic bold"></div>
-            <div class="buttonsContainer flex ">
+            <div class="buttonsContainer flex">
                 <div>
-                    <div class="genericButtons flex ">
+                    <div class="genericButtons flex border">
                         <button id="reset">AC</button>
                         <button id="numberToggle">+/-</button>
                         <button id="mod">%</button>
                     </div>
-                    <div class="numbersContainer flex flex_jcc aic ">
+                    <div class="numbersContainer flex border">
                         <button class="numbers" id="one">1</button>
                         <button class="numbers" id="two">2</button>
                         <button class="numbers" id="three">3</button>
@@ -155,9 +34,9 @@
                         <button class="numbers" id="period">.</button>
                     </div>
                 </div>
-                <div class="opContainer flex ">
+                <div class="opContainer flex border">
                     <button id="divide" class="operators">/</button>
-                    <button id="multiply" class="operators">x</button>
+                    <button id="multiply" class="operators">*</button>
                     <button id="minus" class="operators">-</button>
                     <button id="plus" class="operators">+</button>
                     <button id="equals" class="operators">=</button>
