--- a/JavaScript/eindopdracht/index.html
+++ b/JavaScript/eindopdracht/index.html
@@ -47,7 +47,8 @@
         </div>
 
     </main>
-    <script src="./calculator.js"></script>
+    <!-- <script src="./calculator.js"></script> -->
+    <script src="./simpleCalc.js"></script>
 </body>
 
 </html>
