Calculator | JS - mini-update

--- a/JavaScript/eindopdracht/simple/simple.html
+++ b/JavaScript/eindopdracht/simple/simple.html
@@ -15,8 +15,8 @@
             <div class="buttonsContainer flex">
                 <div>
                     <div class="genericButtons flex">
-                        <button id="reset" onclick="resetInput()">AC</button>
-                        <button id="numberToggle" onclick="flipDigit()" >+/-</button>
+                        <button id="reset" onclick="resetDisplay()">AC</button>
+                        <button id="numberToggle" class="flip" onclick="checkInput(this)" >+/-</button>
                         <button id="mod" class="mod" onclick="checkInput(this)">%</button>
                     </div>
                     <div class="numbersContainer flex">
