Changelog * Clean up code * Added values for 'volgende klas?'

--- a/JavaScript/arrays/index.html
+++ b/JavaScript/arrays/index.html
@@ -17,6 +17,7 @@
     <h1>Introduction to JavaScript</h1>
 
     <main>
+        <p>&lt;RUBY&gt;</p>
         <button type="reset" onclick="refresh()">Refresh!</button>
     </main>
 
